2002-07-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed bug 573016, some gerbers not drawn.
	  always do fabs on floats not abs.
	* src/gerb_image.[hc], gerber.c: Parses and stores %IN%
	  ie the image name.

2002-07-15  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_icon.h: Added application icon.

2002-07-13  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Added --with-gtk-config to fit FreeBSD 
	  after patch from Bruno Schwander <bruno@tinkerbox.org>.
	* example/ekf/README: Fixed bug 578583 basically saying that
	  this example shouldn't work.
	
-- Release 0.0.9 --

2002-07-06  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Updated version to 0.0.9.
	* man/gerbv.1.in: Updated man page with new features.

2002-07-05  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Save a widget by adding a leading space in
	  statusbar.

2002-07-04  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Statusbar => Label to allow setting a fixed
	  width font and thus avoid getting the coordinates to move
	  as the number of digits change. Moved font names to header
	  file. We should consider using a rc-file for font names and
	  colours and stuff.
	  Made status bar not expandable.

2002-07-02  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Macrofied coordinate unit
	  conversions to have the constants in one place. Converted
	  sprintf()s to safer snprintf()s.

2002-07-01  Anders Eriksson  <anders@umunet.org>

	* src/gerbv_screen.h: Bounding box needs to be doubles, not
	  ints.
	* src/gerbv.c (motion_notify_event): Finally it seems I got 
	  the absolute coordinates right. Partly closes feature
	  request 567965 (still need to add error messages and fix
	  the layout).
	  * Fixed some of the layout issues. Now uses only one statusbar
	  widget instead of three. The message is composed from three
	  strings. Still no error messages.

2002-06-20  Anders Eriksson  <anders@umunet.org>
